k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: visitor-app-service
spec:
  type: NodePort
  selector:
    app: visitor-app
  ports:
    - port: 5000
      nodePort: 30007
      targetPort: 5000
