k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitor-ingress
spec:
  rules: 
  - host: visitor-app.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service: 
            name: visitor-app-service

            port:
              number: 5000
